# Ewald_minres

./: CMakeLists.txt  CONFIG.1  CONFIG.2.small  CONFIG.3  CONFIG.4.small  CONFIG.big  LICENSE  README.md  accuracy.ods  charge_grid_module.f90  compile  energy.1.small  energy.2  energy.3.small  energy.4  energy.crooked  fft.f90  grid_io_module.f90  in  lattice.f90  real_space_module.f90  sfp_module.f90  ssp_module.f90  test.f90
doc/: .~lock.accuracy.ods#  accuracy.ods
minres-ijb/: compile  minresModule_ijb.f90
src/: CMakeLists.txt  Ewald_3d_module.f90  charge_grid_module.f90  comms_base_class.f90  comms_parallel.f90  comms_serial.f90  compile  domains_module.f90  equation_solver_base_class.f90  equation_solver_cg.f90  equation_solver_hypre_pfmg.f90  equation_solver_minres.f90  equation_solver_precon_base_class.f90  equation_solver_weighted_jacobi.f90  ffp_module.f90  fft.f90  grid_io_module.f90  halo_base_class.f90  halo_parallel.f90  halo_serial.f90  hocm4.f90  lattice.f90  minresModule_ijb.f90  quadrature_base_class.f90  quadrature_trapezium.f90  quadrature_trapezium_parallel.f90  quadrature_trapezium_serial.f90  real_space_module.f90  sfp_module.f90  sort.f90  ssp_hypre.c  ssp_hypre.h  ssp_module.f90  swap_module.f90  test.f90  test_mpi.f90  vec_utilities.f90
src/FD_Template/: CMakeLists.txt
src/FD_Template/cmake/: FindFord.cmake
src/FD_Template/src/: CMakeLists.txt  fd_laplacian_3d.f90
src/minres-ijb/: CMakeLists.txt  comms_parallel.f90  comms_serial.f90  halo.f90  halo_base_class.f90  halo_parallel.f90  halo_serial.f90  minresModule_ijb.f90
test/: exp.f90
test_cases/: CONFIG.crooked  CONFIG.more_crooked  CONTROL  FIELD.more_crooked  FIELD.small  energy.big  energy.more_crooked
utils/: gen_conf.f90
work/: cmp_forces.f90  in_jac  in_mpi
